Support MIT KfW as GSS-API library.

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -183,7 +183,7 @@ fi
 
 # GSSAPI.
 AC_ARG_WITH(gssapi-impl,
-  AS_HELP_STRING([--with-gssapi-impl=gss/mit/heimdal/yes],
+  AS_HELP_STRING([--with-gssapi-impl=gss/kfw/mit/heimdal/yes],
                  [select GSS-API implementation]),
   gssapi_impl=$withval, gssapi_impl=yes)
 if test "$gs2" = no && test "$gssapi" = no; then
@@ -204,6 +204,14 @@ gss_check_version (0);
   if test "$ac_cv_libgss" != yes; then
     gssapi_impl=no
     AC_MSG_WARN([GNU GSS not found, disabling GSSAPI.])
+  fi
+elif test "$gssapi_impl" = "kfw"; then
+  AC_MSG_NOTICE([trying MIT Kerberos for Windows GSS-API library])
+  AC_LIB_HAVE_LINKFLAGS(gssapi32,, [#include <gssapi/gssapi.h>],
+                        [gss_release_oid (NULL, NULL)])
+  if test "$ac_cv_libgssapi32" != yes; then
+    gssapi_impl=no
+    AC_MSG_WARN([MIT Kerberos for Windows not found, disabling GSSAPI.])
   fi
 elif test "$gssapi_impl" = "mit"; then
   AC_MSG_NOTICE([trying MIT])
@@ -226,7 +234,7 @@ elif test "$gssapi_impl" = "heimdal"; then
     gssapi_impl=no
   fi
 elif test "$gssapi_impl" != "no"; then
-  AC_MSG_NOTICE([auto-detecing GSS/MIT/Heimdal])
+  AC_MSG_NOTICE([auto-detecting GSS/MIT/Heimdal])
   AC_MSG_NOTICE([use --with-gssapi-impl=IMPL to hard code])
   AC_MSG_NOTICE([where IMPL is `gss', `mit', or `heimdal'])
   AC_LIB_HAVE_LINKFLAGS(gss,, [#include <gss.h>], [
@@ -273,7 +281,8 @@ if test "$gssapi_impl" != "no"; then
   AC_CHECK_FUNCS([gss_inquire_mech_for_saslname])
   if test "$gssapi_impl" = "mit" || \
       test "$gssapi_impl" = "heimdal" || \
-      test "$gssapi_impl" = "mitheimdal"; then
+      test "$gssapi_impl" = "mitheimdal" || \
+      test "$gssapi_impl" = "kfw"; then
     AC_CHECK_HEADERS([gssapi.h gssapi/gssapi.h])
     if test "$ac_cv_header_gssapi_h$ac_cv_header_gssapi_gssapi_h" = "nono"; then
       gssapi_impl=no
