Update gnulib files.

--- a/lib/gltests/Makefile.am
+++ b/lib/gltests/Makefile.am
@@ -264,7 +264,7 @@ EXTRA_DIST += test-stdio.c
 
 TESTS += test-stdlib
 check_PROGRAMS += test-stdlib
-EXTRA_DIST += test-stdlib.c
+EXTRA_DIST += test-stdlib.c test-sys_wait.h
 
 ## end   gnulib module stdlib-tests
 
@@ -296,7 +296,7 @@ EXTRA_DIST += test-strverscmp.c signature.h macros.h
 
 TESTS += test-sys_wait
 check_PROGRAMS += test-sys_wait
-EXTRA_DIST += test-sys_wait.c
+EXTRA_DIST += test-sys_wait.c test-sys_wait.h
 
 ## end   gnulib module sys_wait-tests
 
