Support SCRAM-SHA-1-PLUS.  Add GSASL_CB_TLS_UNIQUE.  Use GnuTLS for tls-unique CB.

--- a/.gitignore
+++ b/.gitignore
@@ -784,6 +784,8 @@ tests/readnz
 tests/readnz.o
 tests/scram
 tests/scram.o
+tests/scramplus
+tests/scramplus.o
 tests/simple
 tests/simple.o
 tests/suggest
