--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,7 +42,7 @@ TESTS_ENVIRONMENT = \
 	$(VALGRIND)
 
 ctests = external cram-md5 digest-md5 md5file name errors suggest	\
-	simple crypto scram symbols readnz gssapi gs2-krb5
+	simple crypto scram scramplus symbols readnz gssapi gs2-krb5
 if OBSOLETE
 ctests += old-simple old-md5file old-cram-md5 old-digest-md5	\
 	old-base64
