--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -37,6 +37,7 @@ DLL_VERSION=`expr ${LT_CURRENT} - ${LT_AGE}`
 AC_SUBST(DLL_VERSION)
 
 AM_INIT_AUTOMAKE([1.10 -Wall -Werror])
+AM_SILENT_RULES([yes])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
