libgsasl.pc: Add a Libs.private.
Reported by Volker Grabsch <vog@notjusthosting.com>.

--- a/lib/libgsasl.pc.in
+++ b/lib/libgsasl.pc.in
@@ -15,4 +15,5 @@ Description: GNU Simple Authentication and Security Layer (SASL)
 URL: http://www.gnu.org/software/gsasl/
 Version: @VERSION@
 Libs: -L${libdir} -lgsasl
+Libs.private: @LTLIBGCRYPT@ @LTLIBIDN@ @LTLIBNTLM@
 Cflags: -I${includedir}
