--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
+# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Simon Josefsson
 #
 # This file is part of GNU SASL.
 #
@@ -37,8 +37,8 @@ AM_MISSING_PROG(DIA, dia, $missing_dir)
 AM_MISSING_PROG(EPSTOPDF, epstopdf, $missing_dir)
 
 # Internationalization.
-AM_GNU_GETTEXT(external)
-AM_GNU_GETTEXT_VERSION(0.17)
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.18.1])
 
 # Checks for header files.
 AC_CHECK_HEADERS(pwd.h)
