add gl/readline.lo and .o to ignore list
Signed-off-by: Brad Hards <bradh@frogmouth.net>
Signed-off-by: Simon Josefsson <simon@josefsson.org>

--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,8 @@ gl/quote.lo
 gl/quote.o
 gl/quotearg.lo
 gl/quotearg.o
+gl/readline.lo
+gl/readline.o
 gl/ref-add.sed
 gl/ref-del.sed
 gl/sockets.lo
