--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -166,6 +166,18 @@ AC_MSG_RESULT($scram_sha1)
 
 AM_CONDITIONAL(SCRAM, test "$scram_sha1" != "no")
 
+# SAML20
+AC_ARG_ENABLE(saml20,
+  AS_HELP_STRING([--disable-saml20], [don't use the SAML20 mechanism]),
+  saml20=$enableval)
+if test "$saml20" != "no" ; then
+	saml20=yes
+	AC_DEFINE(USE_SAML20, 1, [Define to 1 if you want SAML20.])
+fi
+AC_MSG_CHECKING([if SAML20 should be used])
+AC_MSG_RESULT($saml20)
+AM_CONDITIONAL(SAML20, test x$saml20 = xyes)
+
 # GS2, first part
 AC_ARG_ENABLE(gs2,
   AS_HELP_STRING([--disable-gs2], [don't use the GS2 mechanism]),
@@ -398,6 +410,7 @@ AC_CONFIG_FILES([
   cram-md5/Makefile
   digest-md5/Makefile
   scram/Makefile
+  saml20/Makefile \
   external/Makefile
   gl/Makefile
   gltests/Makefile
