Use getpass-gnu instead of getpass to get a working getpass everywhere.
Solves problem on Mac OS X reported by Wim Lewis <wiml@hhhh.org>.

--- a/gltests/Makefile.am
+++ b/gltests/Makefile.am
@@ -704,6 +704,15 @@ EXTRA_DIST += test-lstat.h test-lstat.c signature.h macros.h
 
 ## end   gnulib module lstat-tests
 
+## begin gnulib module malloc-posix
+
+
+EXTRA_DIST += malloc.c
+
+EXTRA_libtests_a_SOURCES += malloc.c
+
+## end   gnulib module malloc-posix
+
 ## begin gnulib module malloca
 
 libtests_a_SOURCES += malloca.c
